delete did not use data put string to value string

--- a/app/src/main/res/layout/dialog_home_filter.xml
+++ b/app/src/main/res/layout/dialog_home_filter.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="搜尋"
+        android:text="@string/text_search_title"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:typeface="monospace"
@@ -55,7 +55,7 @@
             android:gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:text="年份"
+            android:text="@string/text_search_year"
             android:textColor="@color/white_gray_99"
             android:textSize="18sp"
             android:typeface="monospace"
@@ -99,7 +99,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout10">
 
-
         <TextView
             android:id="@+id/text_filter_title_month"
             android:layout_width="wrap_content"
@@ -110,7 +109,7 @@
             android:gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:text="月份"
+            android:text="@string/text_search_month"
             android:textColor="@color/white_gray_99"
             android:textSize="18sp"
             android:typeface="monospace"
@@ -164,7 +163,7 @@
             android:gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:text="天數"
+            android:text="@string/text_search_day"
             android:textColor="@color/white_gray_99"
             android:textSize="18sp"
             android:typeface="monospace"
@@ -177,7 +176,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="0 / 30"
+            android:text="@string/text_search_day_number"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/text_filter_title_day"
             app:layout_constraintStart_toEndOf="@+id/text_filter_title_day"
@@ -222,7 +221,7 @@
             android:gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:text="國家"
+            android:text="@string/text_search_country"
             android:textColor="@color/white_gray_99"
             android:textSize="18sp"
             android:typeface="monospace"
@@ -246,7 +245,7 @@
             android:popupBackground="@android:color/white"
             android:popupElevation="3dp"
             android:textAlignment="center"
-            android:entries="@array/filter_trip_country_list"
+            android:entries="@array/trip_country_list"
             android:spinnerMode="dropdown"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -277,7 +276,7 @@
             android:gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:text="收藏"
+            android:text="@string/text_search_collection"
             android:textColor="@color/white_gray_99"
             android:textSize="18sp"
             android:typeface="monospace"
@@ -290,7 +289,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="0 / 100"
+            android:text="@string/text_search_collection_number"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/text_filter_title_collection"
             app:layout_constraintStart_toEndOf="@+id/text_filter_title_collection"
@@ -322,7 +321,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/corner_dialog"
-        android:text="確認"
+        android:text="@string/button_check"
         android:textColor="@color/black_66"
         android:elevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
