--- a/app/src/main/res/layout/fragment_addordeletepoint.xml
+++ b/app/src/main/res/layout/fragment_addordeletepoint.xml
@@ -31,11 +31,11 @@
             android:background="@null"
             android:ems="10"
             android:gravity="center"
-            android:hint="輸入地點名稱"
+            android:hint="@string/text_hint_addpoint_place"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="@color/white_gray_99"
-            android:textSize="14sp"
+            android:textSize="@dimen/text"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,11 +68,11 @@
             android:background="@null"
             android:ems="10"
             android:gravity="center"
-            android:hint="輸入地點備註"
+            android:hint="@string/text_hint_addpoint_describe"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="@color/white_gray_99"
-            android:textSize="14sp"
+            android:textSize="@dimen/text"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -104,11 +104,11 @@
             android:background="@null"
             android:ems="10"
             android:gravity="center"
-            android:hint="輸入預計花費"
+            android:hint="@string/text_hint_addpoint_cost"
             android:inputType="number"
             android:textColor="@color/white"
             android:textColorHint="@color/white_gray_99"
-            android:textSize="14sp"
+            android:textSize="@dimen/text"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -157,7 +157,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/corner_dialog_background"
-        android:hint="選擇到達時間"
+        android:hint="@string/text_hint_addpoint_time"
         android:textColor="@color/white"
         android:textColorHint="@color/white_gray_99"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +173,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/corner_dialog"
-        android:text="確認加入"
+        android:text="@string/button_checkadd"
         android:textColor="@color/black_66"
         android:elevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
