--- a/app/src/main/res/layout/dialog_add_tirp_owner.xml
+++ b/app/src/main/res/layout/dialog_add_tirp_owner.xml
@@ -29,11 +29,11 @@
             android:background="@null"
             android:ems="10"
             android:gravity="center"
-            android:hint="請輸入欲邀請的對象帳號"
+            android:hint="@string/text_hint_addowner"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="@color/white_gray_99"
-            android:textSize="14sp"
+            android:textSize="@dimen/text"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/corner_dialog"
         android:elevation="6dp"
-        android:text="邀請加入"
+        android:text="@string/button_add_request"
         android:textColor="@color/black_66"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
