--- a/app/src/main/res/layout/dialog_add_trip.xml
+++ b/app/src/main/res/layout/dialog_add_trip.xml
@@ -29,11 +29,11 @@
             android:background="@null"
             android:ems="10"
             android:gravity="center"
-            android:hint="輸入旅程標題"
+            android:hint="@string/text_hint_trip_name"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="@color/white_gray_99"
-            android:textSize="14sp"
+            android:textSize="@dimen/text"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -65,11 +65,11 @@
             android:background="@null"
             android:ems="10"
             android:gravity="center"
-            android:hint="輸入旅程描述"
+            android:hint="@string/text_hint_trip_describe"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="@color/white_gray_99"
-            android:textSize="14sp"
+            android:textSize="@dimen/text"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +105,7 @@
             android:popupBackground="@android:color/white"
             android:popupElevation="3dp"
             android:textAlignment="center"
-            android:entries="@array/add_trip_country_list"
+            android:entries="@array/trip_country_list"
             android:spinnerMode="dropdown"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +122,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/corner_dialog_background"
-        android:hint="選擇出發日期"
+        android:hint="@string/text_hint_trip_starttime"
         android:textColor="@color/white"
         android:textColorHint="@color/white_gray_99"
         app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
@@ -135,7 +135,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/corner_dialog_background"
-        android:hint="選擇結束日期"
+        android:hint="@string/text_hint_trip_endtime"
         android:textColor="@color/white"
         android:textColorHint="@color/white_gray_99"
         app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
@@ -150,7 +150,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/corner_dialog"
-        android:text="確認加入"
+        android:text="@string/button_checkadd"
         android:textColor="@color/black_66"
         android:elevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
