--- a/app/src/main/res/layout/dialog_delete_point_request.xml
+++ b/app/src/main/res/layout/dialog_delete_point_request.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="是否要將地點從旅程中刪除"
+            android:text="@string/text_hint_deletepoint"
             android:textColor="@color/white"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/corner_dialog"
         android:elevation="6dp"
-        android:text="確認"
+        android:text="@string/button_check"
         android:textColor="@color/black_66"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
