--- a/app/src/main/res/layout/dialog_request.xml
+++ b/app/src/main/res/layout/dialog_request.xml
@@ -61,11 +61,11 @@
             android:background="@null"
             android:ems="10"
             android:gravity="center"
-            android:hint="請輸入欲加入的好友帳號"
+            android:hint="@string/text_hint_addfriend"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="@color/white_gray_99"
-            android:textSize="14sp"
+            android:textSize="@dimen/text"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +84,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/corner_dialog"
         android:elevation="6dp"
-        android:text="加入好友"
+        android:text="@string/button_addfriend"
         android:textColor="@color/black_66"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
