--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
         android:letterSpacing="0.15"
-        android:text="成功"
+        android:text="@string/text_dialog_success"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:typeface="monospace"
