--- a/app/src/main/res/layout/item_request.xml
+++ b/app/src/main/res/layout/item_request.xml
@@ -28,11 +28,12 @@
             android:layout_marginBottom="8dp"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
-            android:text="TextView"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/image_request_photo"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="TextView"
+            />
 
         <ImageView
             android:id="@+id/image_request_photo"
@@ -56,7 +57,7 @@
             android:background="@drawable/corner_dialog"
             android:elevation="6dp"
             android:gravity="center"
-            android:text="接受"
+            android:text="@string/quest_agree"
             android:textColor="@color/black_66"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +72,7 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/corner_dialog_background"
             android:elevation="6dp"
-            android:text="拒絕"
+            android:text="@string/quest_disagree"
             android:gravity="center"
             android:textColor="@color/white_gray_66"
             app:layout_constraintBottom_toBottomOf="parent"
