--- a/app/src/main/res/layout/item_trip_content.xml
+++ b/app/src/main/res/layout/item_trip_content.xml
@@ -19,7 +19,7 @@
         android:paddingRight="8dp"
         android:paddingBottom="2dp"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="@dimen/text"
         android:textStyle="bold"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:textColor="@color/gray"
-        android:textSize="14sp"
+        android:textSize="@dimen/text"
         android:typeface="sans"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout15"
         app:layout_constraintEnd_toEndOf="@+id/constraintLayout15"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:textColor="@color/gray"
-        android:textSize="14sp"
+        android:textSize="@dimen/text"
         android:textStyle="bold"
         android:typeface="sans"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout15"
@@ -74,7 +74,7 @@
             android:layout_marginBottom="8dp"
             android:maxLines="2"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="@dimen/text"
             android:typeface="sans"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
