--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -5,17 +5,17 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/home_selected"
-        android:title="" />
+        android:title="@string/bottom_navigation_home" />
 
     <item
         android:id="@+id/navigation_trip"
         android:icon="@drawable/trip_selected"
-        android:title="" />
+        android:title="@string/bottom_navigation_map" />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/profile_selected"
-        android:title="" />
+        android:title="@string/bottom_navigation_profile" />
 
 
 </menu>
